qa/apps/portal-ui-release-cqdg-406/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-ui-release-cqdg-406
  name: portal-ui-release-cqdg-406
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-ui-release-cqdg-406
  template:
    metadata:
      labels:
        app: portal-ui-release-cqdg-406
    spec:
      imagePullSecrets:
      - name: images-pull
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-portal-ui:feature-cqdg-406-f9bfb7b-1696618407 # {"$imagepolicy": "cqdg-qa-fluxcd:portal-ui-release-cqdg-406"}
        name: portal-ui-release-cqdg-406
        resources:
          requests:
            memory: "256Mi"
            cpu: '0.50'
          limits:
            memory: "512Mi"
            cpu: '1.00'
