qa/apps/portal-ui-release-cqdg-406/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portal-ui-release-cqdg-406
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - portal-ui-cqdg-406.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: portal-ui-cqdg-406.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: portal-ui-release-cqdg-406
            servicePort: 3000
